force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Default true for new Accounts created in Salesforce. Reflecting Business Partner status in SAP.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>