force-app/main/default/objects/Account/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <label>Annual Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 to 5 MM</fullName>
            </value>
            <value>
                <fullName>0 to 10 MM</fullName>
            </value>
            <value>
                <fullName>5 MM to 50 MM</fullName>
            </value>
            <value>
                <fullName>10 MM to 25 MM</fullName>
            </value>
            <value>
                <fullName>25 MM to 50 MM</fullName>
            </value>
            <value>
                <fullName>50 MM to 100 MM</fullName>
            </value>
            <value>
                <fullName>+ 100 MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>