force-app/main/default/objects/Account/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Orçamento</fullName>
            </value>
            <value>
                <fullName>Contato</fullName>
            </value>
            <value>
                <fullName>Trabalhe Conosco</fullName>
            </value>
            <value>
                <fullName>Suporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>