force-app/main/default/objects/Account/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <description>Shipping</description>
    <label>Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>