force-app/main/default/objects/Account/fields/Autorizacao_ANVISA__c.field-meta.xml
<CustomField>
    <fullName>Autorizacao_ANVISA__c</fullName>
    <label>Autorização ANVISA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>