force-app/main/default/objects/Account/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INITABRL5204BOE</fullName>
                <default>true</default>
                <label>Itau</label>
            </value>
            <value>
                <fullName>CB_Itau_CG</fullName>
                <label>Itau CG</label>
            </value>
            <value>
                <fullName>INITABRL4729</fullName>
                <label>Itau TRF</label>
            </value>
            <value>
                <fullName>INBDBBRL0089</fullName>
                <label>Banco do Brasil TRF</label>
            </value>
            <value>
                <fullName>OUTITABRL4729</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>