force-app/main/default/objects/Account/fields/Base_Dataset__c.field-meta.xml
<CustomField>
    <fullName>Base_Dataset__c</fullName>
    <label>Base Dataset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring Orders</fullName>
                <default>true</default>
                <label>Recurring Orders</label>
            </value>
            <value>
                <fullName>Recurring Sales</fullName>
            </value>
            <value>
                <fullName>Distributor Trace Sales</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Small/Medium Forecast</fullName>
                <isActive>false</isActive>
                <label>Small/Medium Forecast</label>
            </value>
            <value>
                <fullName>Trace Forecast</fullName>
                <isActive>false</isActive>
                <label>Trace Forecast</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>