force-app/main/default/objects/Account/fields/BillingNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>BillingNeighborhood__c</fullName>
    <label>Billing Neighborhood</label>
    <length>100</length>
    <type>Text</type>
</CustomField>