force-app/main/default/objects/Account/fields/Building_Floor__c.field-meta.xml
<CustomField>
    <fullName>Building_Floor__c</fullName>
    <label>Building/Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>