force-app/main/default/objects/Account/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <label>Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>