force-app/main/default/objects/Account/fields/CidadeCobranca__c.field-meta.xml
<CustomField>
    <fullName>CidadeCobranca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade de Cobrança</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Contas de cobrança</relationshipLabel>
    <relationshipName>ContasCobranca</relationshipName>
    <type>Lookup</type>
</CustomField>