force-app/main/default/objects/Account/fields/CidadeEntrega__c.field-meta.xml
<CustomField>
    <fullName>CidadeEntrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade de Entrega</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Contas (Cidade de Entrega)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>