force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Deve ser incluído com os pontos e traços (Ex: 00.000.000/0001-00)</inlineHelpText>
    <label>CNPJ</label>
    <length>25</length>
    <type>Text</type>
</CustomField>