force-app/main/default/objects/Account/fields/CodigoSAP__c.field-meta.xml
<CustomField>
    <fullName>CodigoSAP__c</fullName>
    <externalId>true</externalId>
    <label>Código SAP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>