force-app/main/default/objects/Account/fields/ContactScore__c.field-meta.xml
<CustomField>
    <fullName>ContactScore__c</fullName>
    <label>Contact Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>