force-app/main/default/objects/Account/fields/CreditApproved__c.field-meta.xml
<CustomField>
    <fullName>CreditApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Approved</label>
    <type>Checkbox</type>
</CustomField>