force-app/main/default/objects/Account/fields/CreditLine__c.field-meta.xml
<CustomField>
    <fullName>CreditLine__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>