force-app/main/default/objects/Account/fields/Customer_Core_Business__c.field-meta.xml
<CustomField>
    <fullName>Customer_Core_Business__c</fullName>
    <label>Customer &quot;Core Business&quot;</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>