force-app/main/default/objects/Account/fields/DDC__c.field-meta.xml
<CustomField>
    <fullName>DDC__c</fullName>
    <label>Area Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>