force-app/main/default/objects/Account/fields/Default_Partner__c.field-meta.xml
<CustomField>
    <fullName>Default_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Default_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>