force-app/main/default/objects/Account/fields/Delivery_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Notification_Email__c</fullName>
    <inlineHelpText>For multiply emails, separate them with semicolon.</inlineHelpText>
    <label>Delivery Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>