force-app/main/default/objects/Account/fields/Diabetes_Type__c.field-meta.xml
<CustomField>
    <fullName>Diabetes_Type__c</fullName>
    <label>Diabetes Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DT1</fullName>
            </value>
            <value>
                <fullName>DT2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>