force-app/main/default/objects/Account/fields/Do_Not_Calc__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark to avoid financials calculation. Used to bypass the OrderAverage Flow</description>
    <label>Do Not Calc</label>
    <type>Checkbox</type>
</CustomField>