force-app/main/default/objects/Account/fields/Do_Not_Send_Delayed_Alert__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Delayed_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Delayed Alert</label>
    <type>Checkbox</type>
</CustomField>