force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Control Field created to get the PersonEmail and store it as an ExternalI.
Used to sync Shopify Leads vs Accounts</description>
    <externalId>true</externalId>
    <label>Email*</label>
    <length>100</length>
    <type>Text</type>
</CustomField>