force-app/main/default/objects/Account/fields/EmailNfe__c.field-meta.xml
<CustomField>
    <fullName>EmailNfe__c</fullName>
    <inlineHelpText>E-mail que será enviada a Nota Fiscal após o faturamento do pedido.</inlineHelpText>
    <label>Email Nfe</label>
    <type>Email</type>
</CustomField>