force-app/main/default/objects/Account/fields/Fantasy_Name__c.field-meta.xml
<CustomField>
    <fullName>Fantasy_Name__c</fullName>
    <inlineHelpText>Neste campo pode ser inserido o nome fantasia da empresa ou qualquer outro termo que ajude na identificação do cliente.</inlineHelpText>
    <label>Fantasy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>