force-app/main/default/objects/Account/fields/Federal_Tax_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Id_Number__c</fullName>
    <label>EIN/BN Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>