force-app/main/default/objects/Account/fields/Forecast_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the Forecasting feature is enabled for this Account.</description>
    <inlineHelpText>Determines whether the Forecasting feature is enabled for this Account.</inlineHelpText>
    <label>Forecasting Enabled</label>
    <type>Checkbox</type>
</CustomField>