force-app/main/default/objects/Account/fields/Forecast_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Interaction__c</fullName>
    <label>Forecast Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
                <isActive>false</isActive>
                <label>Disable</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>