force-app/main/default/objects/Account/fields/Forecasted_Products_Number__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Products_Number__c</fullName>
    <inlineHelpText>Total number of Products being forecasted.</inlineHelpText>
    <label>Forecasted Products Number</label>
    <summaryFilterItems>
        <field>Forecast_Product__c.Product_Enabled__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Product__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>