force-app/main/default/objects/Account/fields/Forecasting__c.field-meta.xml
<CustomField>
    <fullName>Forecasting__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/n/Forecasting?c__recordId=&quot; &amp; CASESAFEID(Id)  &amp; &quot;&amp;c__name=&quot; &amp;  Name, &apos;Go To Forecasting&apos;)</formula>
    <label>Forecasting</label>
    <type>Text</type>
</CustomField>