force-app/main/default/objects/Account/fields/GPO__c.field-meta.xml
<CustomField>
    <fullName>GPO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GPO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (GPO)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>