force-app/main/default/objects/Account/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <inlineHelpText>Sempre selecionar a opção &quot;Customer - Local&quot;.</inlineHelpText>
    <label>Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer - Local</fullName>
                <default>true</default>
                <label>Customer - Local</label>
            </value>
            <value>
                <fullName>Customer - Corporate</fullName>
            </value>
            <value>
                <fullName>Customer - Interco</fullName>
            </value>
            <value>
                <fullName>Customer - Other</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>