force-app/main/default/objects/Account/fields/Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Type__c</fullName>
    <inlineHelpText>When Organization type was chosen as hospital, this field will become enabled.</inlineHelpText>
    <label>Hospital Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Organization_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Hospital_Type</valueSetName>
    </valueSet>
</CustomField>