force-app/main/default/objects/Account/fields/IDCidadeCobranca__c.field-meta.xml
<CustomField>
    <fullName>IDCidadeCobranca__c</fullName>
    <label>ID Cidade Cobrança</label>
    <length>50</length>
    <type>Text</type>
</CustomField>