force-app/main/default/objects/Account/fields/IDCidadeEntrega__c.field-meta.xml
<CustomField>
    <fullName>IDCidadeEntrega__c</fullName>
    <label>ID Cidade Entrega</label>
    <length>50</length>
    <type>Text</type>
</CustomField>