force-app/main/default/objects/Account/fields/IDMunicipioCidadeCobranca__c.field-meta.xml
<CustomField>
    <fullName>IDMunicipioCidadeCobranca__c</fullName>
    <label>ID Município Cidade Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>