force-app/main/default/objects/Account/fields/IDMunicipioCidadeEntrega__c.field-meta.xml
<CustomField>
    <fullName>IDMunicipioCidadeEntrega__c</fullName>
    <label>ID Município Cidade Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>