force-app/main/default/objects/Account/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IDN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (IDN)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>