force-app/main/default/objects/Account/fields/In_business_since__c.field-meta.xml
<CustomField>
    <fullName>In_business_since__c</fullName>
    <label>In business since</label>
    <length>10</length>
    <type>Text</type>
</CustomField>