force-app/main/default/objects/Account/fields/InscEstadual__c.field-meta.xml
<CustomField>
    <fullName>InscEstadual__c</fullName>
    <inlineHelpText>Preencha apenas números. Caso o cliente seja isento, deixe o campo em branco</inlineHelpText>
    <label>Inscrição Estadual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>