force-app/main/default/objects/Account/fields/Invoicing_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Email__c</fullName>
    <inlineHelpText>For multiply emails, separate them with semicolon.</inlineHelpText>
    <label>Invoicing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>