force-app/main/default/objects/Account/fields/IsIntegrationValid__c.field-meta.xml
<CustomField>
    <fullName>IsIntegrationValid__c</fullName>
    <formula>IF(ISPICKVAL(CheckIntegration__c, &quot;True&quot;),True,False)</formula>
    <inlineHelpText>O cadastro somente integrará para o SAP caso este checkbox esteja marcado automaticamente. Confira se todos os campos estão preenchidos corretamente e o cadastro devidamente aprovado.</inlineHelpText>
    <label>É integrável?</label>
    <type>Checkbox</type>
</CustomField>