force-app/main/default/objects/Account/fields/IsKeyAccount__c.field-meta.xml
<CustomField>
    <fullName>IsKeyAccount__c</fullName>
    <formula>AND
(
(Owner.FirstName &amp; &apos; &apos; &amp; Owner.LastName) &lt;&gt; &apos;Marketing SA&apos;,
(Owner.FirstName &amp; &apos; &apos; &amp; Owner.LastName) &lt;&gt; &apos;Rafael Borges Soares&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsKeyAccount</label>
    <type>Checkbox</type>
</CustomField>