force-app/main/default/objects/Account/fields/Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email__c</fullName>
    <inlineHelpText>For multiply emails, separate them with semicolon.</inlineHelpText>
    <label>Marketing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>