force-app/main/default/objects/Account/fields/Maximum_Pallet_Height__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Pallet_Height__c</fullName>
    <label>Maximum Pallet Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>