force-app/main/default/objects/Account/fields/MultiCurrency__c.field-meta.xml
<CustomField>
    <fullName>MultiCurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MultiCurrency</label>
    <type>Checkbox</type>
</CustomField>