force-app/main/default/objects/Account/fields/NewCreditRequest__c.field-meta.xml
<CustomField>
    <fullName>NewCreditRequest__c</fullName>
    <label>New Credit Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>