force-app/main/default/objects/Account/fields/NIP__c.field-meta.xml
<CustomField>
    <fullName>NIP__c</fullName>
    <label>NIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>