force-app/main/default/objects/Account/fields/Number_of_Collections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Collections__c</fullName>
    <label>Number of Collections (Daily)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Organization_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Number_of_Collections</valueSetName>
    </valueSet>
</CustomField>