force-app/main/default/objects/Account/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <length>100</length>
    <type>Text</type>
</CustomField>