force-app/main/default/objects/Account/fields/NumOfOrders__c.field-meta.xml
<CustomField>
    <fullName>NumOfOrders__c</fullName>
    <label>NumOfOrders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>