force-app/main/default/objects/Account/fields/Old_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Old Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>