force-app/main/default/objects/Account/fields/Order_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Email__c</fullName>
    <inlineHelpText>For multiply emails, separate them with semicolon.</inlineHelpText>
    <label>Order Confirmation Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>