force-app/main/default/objects/Account/fields/OrderAverage__c.field-meta.xml
<CustomField>
    <fullName>OrderAverage__c</fullName>
    <label>OrderAverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>