force-app/main/default/objects/Account/fields/OrderAvgLastWeek__c.field-meta.xml
<CustomField>
    <fullName>OrderAvgLastWeek__c</fullName>
    <label>Order Average Last Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>