force-app/main/default/objects/Account/fields/OrderCurrentMonth__c.field-meta.xml
<CustomField>
    <fullName>OrderCurrentMonth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Current Month</label>
    <type>Checkbox</type>
</CustomField>