force-app/main/default/objects/Account/fields/Orders_YTD__c.field-meta.xml
<CustomField>
    <fullName>Orders_YTD__c</fullName>
    <description>Sum of Order ammount current year.</description>
    <label>Orders YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>