force-app/main/default/objects/Account/fields/OrdersLastWeek__c.field-meta.xml
<CustomField>
    <fullName>OrdersLastWeek__c</fullName>
    <label>Qty Orders End Of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>