force-app/main/default/objects/Account/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <inlineHelpText>This field informs about specific type of organization - e.g. hospital, pharmacy, lab.</inlineHelpText>
    <label>Organization Type (Segment)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization_Type</valueSetName>
    </valueSet>
</CustomField>