force-app/main/default/objects/Account/fields/Other_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Source__c</fullName>
    <inlineHelpText>Add here other source if you have chosen this option or any additional information like the name of Trade Show.</inlineHelpText>
    <label>Other Source</label>
    <length>155</length>
    <type>Text</type>
</CustomField>