force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% Prepayment</fullName>
            </value>
            <value>
                <fullName>100% COD</fullName>
            </value>
            <value>
                <fullName>100% prepayment before production</fullName>
            </value>
            <value>
                <fullName>100% prepayment before shipment</fullName>
            </value>
            <value>
                <fullName>Net7-C</fullName>
            </value>
            <value>
                <fullName>Net14-C</fullName>
            </value>
            <value>
                <fullName>Net30-C</fullName>
            </value>
            <value>
                <fullName>Net45-C</fullName>
            </value>
            <value>
                <fullName>Net60-C</fullName>
            </value>
            <value>
                <fullName>Net90-C</fullName>
            </value>
            <value>
                <fullName>Net120-C</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>30% Prepayment, 70% COD</fullName>
            </value>
            <value>
                <fullName>30% Prepayment, 70% Net30-C</fullName>
            </value>
            <value>
                <fullName>50% Net30C + 50% Net60-C</fullName>
            </value>
            <value>
                <fullName>50% Prepayment, 50% COD</fullName>
            </value>
            <value>
                <fullName>80% prepayment, 20% ship</fullName>
            </value>
            <value>
                <fullName>Payment at delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>